--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#fff" />
     <link rel="apple-touch-icon" href="images/icons/apple-icon-180.png">
     <!-- IOS -->
+    <script src="./js/notification.js" defer></script>
     <script src="./js/app.js" defer></script>
     <title>Topic PWA</title>
 </head>
